[package]
name = "rc-bot-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = { version = "0.31.0",features = ["std"]}
hex-literal = "0.3.4"
json = "0.12.4"
base64 = "0.13.0"
chrono = "0.4.19"